--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "resend": "^6.5.2",
     "scrollreveal": "^4.0.9",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
